--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://mobilecasinoplay88.github.io/How-to-Choose-the-Best-Mobile-Casino-Games/">https://mobilecasinoplay88.github.io/How-to-Choose-the-Best-Mobile-Casino-Games/</a><br>
+                <a target="_bLank" href="https://mobilecasinoplay88.s3.us-east-005.backblazeb2.com/How+to+Choose+the+Best+Mobile+Casino+Games/index.html">https://mobilecasinoplay88.s3.us-east-005.backblazeb2.com/How+to+Choose+the+Best+Mobile+Casino+Games/index.html</a><br>
+                <a target="_bLank" href="https://how-to-choose-the-best-git-8b18c7-mobilecasinoplay88s-projects.vercel.app/">https://how-to-choose-the-best-git-8b18c7-mobilecasinoplay88s-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://polite-figolla-76da14.netlify.app/">https://polite-figolla-76da14.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
